Added favicon and normalize

--- a/app/templates/default.hbs
+++ b/app/templates/default.hbs
@@ -6,10 +6,13 @@
 	<title></title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+
 	<!-- build:css({.tmp,src}) css/styles.css -->
 	<link rel="stylesheet" href="css/styles.css">
 	<!-- endbuild -->
+
 	<!-- build:js js/libs/modernizr.js -->
 	<script src="js/libs/modernizr.js"></script>
 	<!-- endbuild -->
