--- a/app/templates/styles.scss
+++ b/app/templates/styles.scss
@@ -1,3 +1,69 @@
-/*! (custom) normalize.css v3.0.2 | MIT License | git.io/normalize */
-html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;text-rendering:optimizeLegibility;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}*,:after,:before{-webkit-box-sizing:inherit;-moz-box-sizing:inherit;box-sizing:inherit}body,figure{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent;text-decoration:none;color:inherit;-webkit-transition:all .2s;transition:all .2s}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0;border-radius:0;}button{overflow:visible;-webkit-appearance:none;-moz-appearance:none;padding:0;border:0 none}button,select{text-transform:none}html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:0;margin:0;padding:0}legend{border:0;padding:0}textarea{overflow:auto;resize:vertical;vertical-align:top}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0;width:100%}td,th{padding:0}audio,canvas,iframe,img,svg,video{vertical-align:middle}iframe,img,object,video{max-width:100%}iframe,object,video{display:block;width:100%;}:-moz-ui-invalid{box-shadow:none}
+/* === INUIT SETUP === */
+@import "settings.inuit_setup";
 
+/* === INUIT === */
+@import "../bower_components/inuit-defaults/settings.defaults";
+@import "../bower_components/inuit-responsive-settings/settings.responsive";
+
+@import "../bower_components/inuit-functions/tools.functions";
+@import "../bower_components/inuit-mixins/tools.mixins";
+@import "../bower_components/inuit-responsive-tools/tools.responsive";
+
+@import "../bower_components/inuit-media/objects.media";
+@import "../bower_components/inuit-flag/objects.flag";
+@import "../bower_components/inuit-pack/objects.pack";
+@import "../bower_components/inuit-layout/objects.layout";
+@import "../bower_components/inuit-block/objects.block";
+@import "../bower_components/inuit-buttons/objects.buttons";
+@import "../bower_components/inuit-list-inline/objects.list-inline";
+@import "../bower_components/inuit-list-bare/objects.list-bare";
+
+@import "../bower_components/inuit-normalize/generic.normalize";
+@import "../bower_components/inuit-box-sizing/generic.box-sizing";
+
+@import "../bower_components/inuit-page/base.page";
+@import "../bower_components/inuit-lists/base.lists";
+@import "../bower_components/inuit-images/base.images";
+@import "../bower_components/inuit-headings/base.headings";
+
+@import "../bower_components/inuit-clearfix/trumps.clearfix";
+@import "../bower_components/inuit-widths/trumps.widths";
+@import "../bower_components/inuit-widths-responsive/trumps.widths-responsive";
+@import "../bower_components/inuit-spacing/trumps.spacing";
+@import "../bower_components/inuit-spacing-responsive/trumps.spacing-responsive";
+
+/* === PROJECT === */
+
+/* === setup === */
+@import "settings.global_vars";
+
+/* === utilities === */
+@import "utils/tools.mixins";
+
+/* === settings === */
+@import "ui/base.shared";
+@import "ui/base.images";
+@import "ui/settings.grid_setup";
+@import "ui/settings.page_body";
+@import "ui/settings.typography";
+
+/* === ui - partials === */
+@import "ui/partials/component.box";
+@import "ui/partials/component.buttons";
+@import "ui/partials/component.form";
+@import "ui/partials/component.layer";
+@import "ui/partials/component.loading";
+@import "ui/partials/component.social_sharing";
+@import "ui/partials/component.tabs";
+
+@import "ui/partials/trumps.brand";
+@import "ui/partials/trumps.headings";
+@import "ui/partials/trumps.icons";
+@import "ui/partials/trumps.list";
+@import "ui/partials/trumps.tables";
+
+
+/* === ui - context-specific settings === */
+@import "ui/settings.no_touch";
+@import "ui/settings.touch";
+@import "ui/settings.mediaqueries";
