--- a/app/templates/_trumps.easing.scss
+++ b/app/templates/_trumps.easing.scss
@@ -1,3 +1,7 @@
+//.example {
+//  animation: there-and-back 2.5s ease(in-quad) infinite alternate;
+//}
+
 $ease: (
   in-quad:      cubic-bezier(0.550,  0.085, 0.680, 0.530),
   in-cubic:     cubic-bezier(0.550,  0.055, 0.675, 0.190),
